k8s/namespaces/security/authentik/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-http
  namespace: security
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`authentik.hosted.fail`)
      kind: Rule
      services:
      - name: authentik-server
        port: 80
      middlewares:
      - name: internal-whitelist
        namespace: ingress
      - name: redirect-https
        namespace: ingress
